app1/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  annotations:
    created-by: me
