app1/backend_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx   
        image: nginx:latest  
        ports:
        - containerPort: 80
        resources:
          requests: 
            cpu: "250m" 
            memory: "256Mi"
          limits:
            cpu: "500m"  
            memory: "512Mi"
